# full-stack

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  build_all.sh  build_coverage.sh  build_wasm.bat  build_wasm.sh  changelog.md  conan.ps1  conanfile.py  gitlab  rebuild.sh  requirements.txt  user_guide.md  valgrind.supp
.github/workflows/: build.yml
app_android/app/: build.gradle.kts
app_android/app/src/main/: AndroidManifest.xml
app_android/app/src/main/cpp/: CMakeLists.txt
doc/: build.md  user_guide.md
gitlab/: build.yml  checks.yml  ci.yml  test.yml
scripts/: build_all.sh  build_android_app.sh  build_coverage.sh  build_everything.sh  build_tools.sh  build_valgrind.sh  cppcheck.sh  gitlab_start.sh  gitlab_stop.sh  test_converter.sh  test_transcompiler.sh
src/: CMakeLists.txt  README.md
src/app_android/: settings.gradle.kts
src/app_android/app/: build.gradle.kts
src/app_android/app/src/androidTest/java/com/example/titlecase/: ExampleInstrumentedTest.java
src/app_android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  text_conversion_constexpr.h
src/app_android/app/src/main/java/com/example/titlecase/: MainActivity.java
src/app_android/app/src/main/res/layout/: activity_main.xml
src/app_android/app/src/main/res/values/: strings.xml  themes.xml
src/app_android/app/src/main/res/values-night/: themes.xml
src/app_android/gradle/wrapper/: gradle-wrapper.properties
src/app_cpp/: CMakeLists.txt  app.cpp
src/app_py/: CMakeLists.txt  app.py
src/app_py_cmdl/: CMakeLists.txt  ui.py
src/asm/: CMakeLists.txt  build_and_run.sh
src/asm/linux_x86_64/: CMakeLists.txt  program.s  tool.s
src/cmdl/: CMakeLists.txt  cmdl.cpp
src/cmdl_file/: CMakeLists.txt  cmdl_file.cpp
src/cmdl_interactive/: CMakeLists.txt  cmdl_interactive.cpp
src/docker/: build.sh
src/dynamic_lib/: CMakeLists.txt  lib.cpp  lib.h
src/dynamic_lib_app_py/: CMakeLists.txt  app.py
src/header/: CMakeLists.txt  my_func.h  text_conversion_constexpr.h
src/java_cli/: CMakeLists.txt  TextConversion.java  TextConversionTool.java
src/java_cli/tool/: TextConversionTool.java
src/java_cli/unit_test/: UnitTest.java
src/java_lib/: CMakeLists.txt  TextConversionTool.cpp  TextConversionTool.h
src/lib/: CMakeLists.txt  conversion.cpp  info.cpp  lib.cpp  lib.h  text_conversion.h
src/lib_c/: CMakeLists.txt  c_wrapper.cpp  c_wrapper.h
src/lib_resources/: BUILD.txt  CMakeLists.txt  doxyfile  frontpage.dox
src/lib_resources/doc_examples/: examples.cpp
src/lib_resources/example_project/: CMakeLists.txt  example.cpp
src/lib_test/: tests.cpp
src/py/: CMakeLists.txt  functions.cpp  functions.h  module.cpp  python.cpp
src/py_doc/: CMakeLists.txt
src/py_doc/source/: conf.py  index.rst  text_conversion.rst
src/py_ipynb/: CMakeLists.txt  start_notebook.sh  title_case.ipynb
src/py_marimo/: CMakeLists.txt  start_marimo_notebook.sh  title_case_marimo.py
src/rust/: CMakeLists.txt
src/rust/text_conversion/: build.rs
src/rust/text_conversion/src/: main.rs
src/rust_c_wrapper/: CMakeLists.txt  c_wrapper.cpp
src/rust_cmdl/: CMakeLists.txt
src/rust_cmdl/text_conversion/: Cargo.toml  build.rs
src/rust_cmdl/text_conversion/src/: main.rs  text_conversion.rs
src/script_compiler/: CMakeLists.txt  compiler.cpp
src/script_console/: CMakeLists.txt  console.cpp
src/script_converter/: CMakeLists.txt  backend.cpp  backend_intermediate.cpp  backend_linux_x86_64.cpp  converter.cpp  converter.h  converter2.cpp  converter2.h  data.h  frontend.cpp  main.cpp  optimization.h  target_cpp.cpp  target_linux_x86_64.cpp  target_py.cpp  targets.h
src/script_ide/: CMakeLists.txt  ide.py
src/script_interpreter/: CMakeLists.txt  interpreter.cpp  script.txt
src/script_lib/: CMakeLists.txt  compiler.cpp  engine.cpp  parser.cpp  runtime.cpp  script.cpp  script.h
src/script_lib/private/: tokens.h
src/script_resources/: bad.code  bad.txt  result.cpp  result.py  script.txt  script_full.txt  script_test.txt  work.txt
src/script_runtime/: CMakeLists.txt  runtime.cpp
src/script_test/: CMakeLists.txt  test.cpp
src/script_transcompiler/: CMakeLists.txt  backend.cpp  backend.h  backend_cpp.cpp  backend_linux_x86_64.cpp  backend_python.cpp  data.h  frontend.cpp  frontend.h  main.cpp  optimization.cpp  transcompiler.cpp  transcompiler.h
src/test_c_wrapper/: CMakeLists.txt  test.cpp
src/test_cmdl_file/: compare.cmake  ref.txt  source.txt
src/test_dynamic_lib/: CMakeLists.txt  test.cpp
src/test_header/: CMakeLists.txt  test_utilities.h  tests.cpp
src/test_lib/: CMakeLists.txt  tests.cpp
src/test_lib_c/: CMakeLists.txt
src/test_package/: CMakeLists.txt  conanfile.py  test.cpp
src/test_py/: test.py
src/test_script/: CMakeLists.txt  test.cpp
src/tests/: CMakeLists.txt
src/web/: CMakeLists.txt  web.py
src/web/resources/: script.js
src/web/resources/templates/: base.html  request.html  result.html
src/webassembly/: index.html  main.js  source.cpp  styles.css
src/win_tray/: CMakeLists.txt  clipboard.cpp  clipboard.h  clipboard_test.cpp  resources.h  resources.rc  tray.cpp
