add_subdirectory(header)
add_subdirectory(test_header)

if(ADD_BASIC_TOOLS)
    add_subdirectory(cmdl)
    add_subdirectory(cmdl_interactive)
    add_subdirectory(cmdl_file)
    add_subdirectory(app_py_cmdl)
endif()

if(ADD_SDK)
    add_subdirectory(lib)
    add_subdirectory(lib_resources)
    add_subdirectory(test_lib)
endif()

if(ADD_C_LIB)
    add_subdirectory(lib_c)
    add_subdirectory(test_lib_c)
endif()

if(ADD_ASSEMBLY_PROGRAM AND ADD_C_LIB)
    add_subdirectory(asm)
endif()

if(ADD_PYTHON_MODULE)
    add_subdirectory(py)
    add_subdirectory(app_py)
    add_subdirectory(py_ipynb)
    add_subdirectory(py_marimo)
endif()

if(ADD_PY_DOCS)
    add_subdirectory(py_doc)
endif()

if(ADD_QT_APP AND ADD_SDK)
    add_subdirectory(app_cpp)
endif()

if(ADD_DYNAMIC_LIB)
    add_subdirectory(dynamic_lib)
    add_subdirectory(dynamic_lib_app_py)
    add_subdirectory(test_dynamic_lib)
endif()

if(ADD_SCRIPT_TOOLS)
    add_subdirectory(script_lib)
    add_subdirectory(test_script)
    add_subdirectory(script_console)
    add_subdirectory(script_interpreter)
    add_subdirectory(script_compiler)
    add_subdirectory(script_runtime)
    add_subdirectory(script_transcompiler)
    add_subdirectory(script_ide)
endif()

if(ADD_RUST_APP AND ADD_C_LIB)
    add_subdirectory(rust_cmdl)
endif()

if(ADD_JAVA_APP)
    add_subdirectory(java_lib)
    add_subdirectory(java_cli)
endif()

add_subdirectory(web)

if(WIN32 AND ADD_WIN_TOOLS)
    add_subdirectory(win_tray)
endif()
